add ivan buttons

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -20,7 +20,7 @@
       This is enough to choose ice cream and coffee for any mood!
     </p>
     
-    <button type="button" class="read-more-button" data-modal-open>
+    <button type="button" class="main-button" data-modal-open>
       Read more
       <span>
         <svg class="more" width="12" height="12">
