--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,8 +1,8 @@
 <div class="overlay js-overlay-modal"></div>
 
 <div class="test-buttons">
-  <button class="js-open-modal" data-modal="1">TEST BUTTON - BUY NOW</button>
-  <button class="js-open-modal" data-modal="2">TEST BUTTON - READ MORE</button>
+  <button class="js-open-modal main-button" data-modal="1">TEST BUTTON - BUY NOW</button>
+  <button class="js-open-modal main-button" data-modal="2">TEST BUTTON - READ MORE</button>
 </div>
 
 <!-- -------------------- Buy now modal window -------------------- -->
@@ -44,7 +44,7 @@
             ./images/modal/modal-buyNow-iceCoffee@2x.png 2x
           "
           src="./images/modal/modal-buyNow-iceCoffee.png"
-          alt="ice coffe"
+          alt="ice coffee"
         />
         <span class="modal__circl modal__iceCoffee"></span>
 
@@ -102,7 +102,7 @@
       </label>
 
       <div class="modal__button-container">
-        <button class="modal__button" type="submit">submit</button>
+        <button class="modal__button" type="submit">Submit</button>
       </div>
     </form>
   </div>
