--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -102,7 +102,7 @@
       </label>
 
       <div class="modal__button-container">
-        <button class="modal__button" type="submit">Submit</button>
+        <button class="main-button" type="submit">Submit</button>
       </div>
     </form>
   </div>
