--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -56,7 +56,7 @@
           <use href="./images/header/icon.svg#icon-menu-open"></use>
         </svg>
       </button>
-      <button type="button" class="btn-buy">Buy now</button>
+      <button type="button" class="main-button">Buy now</button>
     </div>
   </div>
 </section>
