--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,6 +1,12 @@
 <section class="section__products">
   <div class="container">
-    <label for="suptitle" class="section__label">100% natural</label>
+    <label for="first_name" class="section__label">100% natural</label>
+    <input
+      type="text"
+      name="first_name"
+      id="first_name"
+      class="input__label visually-hidden"
+    />
     <h2 class="section__title">products</h2>
     <ul class="section__cards">
       <li class="section__card section__card--ice-cream">
