remove conflict, add "scroll to top" button

--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -40,7 +40,7 @@ ul {
   /* Hide all modals  */
   opacity: 0;
   visibility: hidden;
-  overflow-y: scroll;
+
   // z-index must be greater than overlay
   z-index: 21;
 
@@ -428,5 +428,44 @@ ul {
     height: 100%;
     width: 100%;
     object-fit: cover;
+  }
+}
+
+.extras__scroll-to-top {
+  padding: 5px;
+  height: 50px;
+  width: auto;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  font-family: $secondary-ff;
+  cursor: pointer;
+  z-index: 100;
+
+  background-color: $accent-color;
+  border: 0px;
+  border-radius: 50px;
+
+  animation: extras__scroll-to-top 1s linear infinite both;
+}
+
+@keyframes extras__scroll-to-top {
+  0% {
+    transform: translate(0);
+  }
+  20% {
+    transform: translate(-2px, 2px);
+  }
+  40% {
+    transform: translate(-2px, -2px);
+  }
+  60% {
+    transform: translate(2px, 2px);
+  }
+  80% {
+    transform: translate(2px, -2px);
+  }
+  100% {
+    transform: translate(0);
   }
 }
