--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -8,6 +8,9 @@
   <button class="js-open-modal main-button" data-modal="2">TEST BUTTON - READ MORE</button>
 </div>
 
+<!-- BUTTON SCROLL TO TOP OF SCREAN -->
+<button class="extras__scroll-to-top">Scroll To Top</button>
+
 <!-- -------------------- Buy now modal window -------------------- -->
 <div class="overlay js-overlay-modal">
   <div class="modal" data-modal="1">
