--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,8 +1,9 @@
 <section>
-<div class="swiper">
-  <div class="swiper-wrapper">
-
-    <div class="swiper-slide"><picture>
+  <h2 class="visually-hidden">Gallery</h2>
+  <div class="swiper">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide">
+        <picture>
           <source
             srcset="
               ../src/images/gallery/gallery-1_desktop_1x.jpg 1x,
@@ -24,14 +25,15 @@
             "
             media="(max-width:767px)"
           />
-                  <img
-          class="gallery__img"
-          src="../src/images/gallery/gallery-1_desktop_1x.jpg"
-          alt="ice-cream"
-        />
+          <img
+            class="gallery__img"
+            src="../src/images/gallery/gallery-1_desktop_1x.jpg"
+            alt="ice-cream"
+          />
         </picture>
-    </div>
-    <div class="swiper-slide"><picture>
+      </div>
+      <div class="swiper-slide">
+        <picture>
           <source
             srcset="
               ../src/images/gallery/gallery-2_desktop_1x.jpg 1x,
@@ -39,9 +41,9 @@
             "
             media="(min-width:1200px)"
           />
-          <!-- <source
+          <source
             srcset="
-              ../images/gallery/gallery-2_tab_2x.jpg 1x,
+              ../images/gallery/gallery-2_tab_2x.jpg     1x,
               ../src/images/gallery/gallery-2_tab_2x.jpg 2x
             "
             media="(min-width:768px)"
@@ -52,15 +54,16 @@
               ../src/images/gallery/gallery-2_mob_2x.jpg 2x
             "
             media="(max-width:767px)"
-          /> -->
-                  <img
-          class="gallery__img"
-          src="../src/images/gallery/gallery-2_desktop_1x.jpg"
-          alt="ice-cream"
-        />
+          />
+          <img
+            class="gallery__img"
+            src="../src/images/gallery/gallery-2_desktop_1x.jpg"
+            alt="ice-cream"
+          />
         </picture>
       </div>
-    <div class="swiper-slide"><picture>
+      <div class="swiper-slide">
+        <picture>
           <source
             srcset="
               ../src/images/gallery/gallery-3_desktop_1x.jpg 1x,
@@ -68,7 +71,7 @@
             "
             media="(min-width:1200px)"
           />
-          <!-- <source
+          <source
             srcset="
               ../src/images/gallery/gallery-3_tab_1x.jpg 1x,
               ../src/images/gallery/gallery-3_tab_2x.jpg 2x
@@ -81,16 +84,14 @@
               ../src/images/gallery/gallery-3_mob_2x.jpg 2x
             "
             media="(max-width:767px)"
-          /> -->
-                  <img
-          class="gallery__img"
-          src="../src/images/gallery/gallery-3_desktop_1x.jpg"
-          alt="ice-cream"
-        />
+          />
+          <img
+            class="gallery__img"
+            src="../src/images/gallery/gallery-3_desktop_1x.jpg"
+            alt="ice-cream"
+          />
         </picture>
       </div>
+    </div>
   </div>
-  </div>
-</div>
 </section>
-
