--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -37,16 +37,16 @@
     <nav class="nav">
       <ul class="list">
         <li class="item">
-          <a class="link">Home</a>
+          <a href="" class="link">Home</a>
         </li>
         <li class="item">
-          <a class="link">How it’s made?</a>
+          <a href="" class="link">How it’s made?</a>
         </li>
         <li class="item">
-          <a class="link">Our products</a>
+          <a href="" class="link">Our products</a>
         </li>
         <li class="item">
-          <a class="link">Contact</a>
+          <a href="" class="link">Contact</a>
         </li>
       </ul>
     </nav>
