--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -26,12 +26,31 @@ background-color: $main-bg-color;
 }
 .list {
     display: flex;
-    margin-left: 32px;
 }
 .item:not(:last-child) {
     margin-right: 27px;
 }
+.link {
+    display: block;
 
+    font-family: $main-ff;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.3;
+    
+    color: $white-text-color;
+    
+        transition-property: color;
+        transition-duration: $timing-function;
+            transition-timing-function: $duratoin;
+    
+            &:hover,
+            &:focus {
+            color: $accent-color;
+    
+        }
+    }
 .menu-btn {
     border: none;
     background-color: transparent;
@@ -41,7 +60,8 @@ background-color: $main-bg-color;
         
     @include desktop {
         display: none;
-    }
+        
+}
 }
 
 .main-button {
@@ -70,6 +90,16 @@ background-color: $main-bg-color;
     
             &:disabled {
                 background: $disabled-color;
+            }
+            &::after {
+                content: "";
+                background-image:url(../images/header/icon.svg#icon-btn-after);
+        background-size: 12px 12px;
+        background-repeat: no-repeat;
+        fill: $black-text-color;
+            }
+            &:hover::after {
+                fill: $white-text-color;
             }
     
     @media screen and (max-width:767px) {
