Hero-mobile-and-tablet

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,15 +1,31 @@
 <section class="hero container">
-  <h1 class="hero__title">
-    ice cream made with <span class="pos">passion</span>
-  </h1>
-  <ul class="hero__list list">
-    <li class="hero__item">
-      <a class="hero__btn link" href="">Products</a>
-    </li>
-    <li class="hero__item">
-      <a class="hero__link link" href="">How it’s made?</a>
-    </li>
-  </ul>
+  <div class="hero__top">
+    <div>
+      <h1 class="hero__title">
+        ice cream made with <span class="pos">passion</span>
+      </h1>
+      <ul class="hero__list list">
+        <li class="hero__item">
+          <a class="hero__btn link" href="">Products</a>
+        </li>
+        <li class="hero__item">
+          <a class="hero__link link" href="">How it’s made?</a>
+        </li>
+      </ul>
+    </div>
+    <div class="cafe">
+      <ul class="cafe-track list">
+        <li>
+          <p>16</p>
+          <span class="cafe-track-item">cafes</span>
+        </li>
+        <li>
+          <p>23</p>
+          <span class="cafe-track-item">food trucks</span>
+        </li>
+      </ul>
+    </div>
+  </div>
   <ul class="ice__list list">
     <li class="list__ice">
       <img src="./images/hero/ice-cream-mobile-1x.png" alt="" />
@@ -20,6 +36,70 @@
     </li>
     <li class="list__face">
       <img src="./images/hero/ice-face-3.png" alt="" />
+    </li>
+  </ul>
+  <ul class="ellipse-mob list">
+    <li class="elipse-mob-left">
+      <img src="./images/hero/ellipse-mob-left.png" alt="" />
+    </li>
+    <li class="elipse-mob-right">
+      <img src="./images/hero/ellipse-mob-right.png" alt="" />
+    </li>
+  </ul>
+  <div class="about-icecream">
+    <img
+      src="./images/hero/plate-tablet-1x.png"
+      alt=""
+      width="152"
+      height="152"
+    />
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et
+      <a href="" class="link">
+        <svg class="arrow-icon" width="40" height="16">
+          <use href="./images/symbol-defs.svg#icon-Arrow-1"></use>
+        </svg>
+      </a>
+    </p>
+  </div>
+  <ul class="ice__list-tablet list">
+    <li class="list__ice-tablet">
+      <img
+        src="./images/hero/ice-cream-tablet-1x.png"
+        alt=""
+        width="257"
+        height="325"
+      />
+    </li>
+    <li class="list__face-tablet">
+      <img src="./images/hero/ice-face-tablet-1x.png" alt="" />
+    </li>
+    <li class="list__face-tablet">
+      <img src="./images/hero/ice-face-tablet-2-1x.png" alt="" />
+    </li>
+    <li class="list__face-tablet">
+      <img src="./images/hero/ice-face-tablet-3-1x.png" alt="" />
+    </li>
+  </ul>
+  <ul class="ellipse-tablet list">
+    <li>
+      <img
+        class="ellipse-tablet-left"
+        src="./images/hero/ellipse-tablet-left-1x.png"
+        alt=""
+        width="110"
+        height="34"
+      />
+    </li>
+    <li>
+      <img
+        class="ellipse-tablet-right"
+        src="./images/hero/ellipse-tablet-right-1x.png"
+        alt=""
+        width="182"
+        height="63"
+      />
     </li>
   </ul>
 </section>
