--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -75,6 +75,7 @@
     position: absolute;
     bottom: 0;
     left: 81px;
+    filter: drop-shadow(0 0 3.75rem rgba(252, 252, 252, 0.44));
   }
   .list__face {
     position: absolute;
@@ -90,5 +91,150 @@
   .list__face:nth-child(4) {
     bottom: 50;
     left: 159;
+  }
+
+  .about-icecream {
+    display: none;
+  }
+  .cafe {
+    display: none;
+  }
+
+  .ice__list-tablet {
+    display: none;
+  }
+
+  .ellipse-tablet {
+    display: none;
+  }
+
+  .elipse-mob-left {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
+
+  .elipse-mob-right {
+    position: absolute;
+    bottom: 0;
+    left: 190;
+  }
+
+  @include tablet {
+    padding-top: 104px;
+    padding-bottom: 13px;
+    .hero__top {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .list__ice,
+    .list__face {
+      display: none;
+    }
+
+    .ellipse-mob {
+      display: none;
+    }
+    .about-icecream {
+      display: flex;
+      align-items: center;
+      margin-top: 28px;
+      img {
+        width: 152px;
+        height: 152px;
+        margin-right: 33px;
+      }
+      p {
+        max-width: 151px;
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.42;
+
+        color: #fcfcfc;
+      }
+    }
+
+    .blur-tablet {
+      position: absolute;
+      bottom: 0;
+      right: 80px;
+      z-index: -1;
+    }
+
+    .ice__list-tablet {
+      display: block;
+    }
+
+    .list__ice-tablet {
+      position: absolute;
+      bottom: 0;
+      right: 93px;
+      filter: drop-shadow(0 0 3.75rem rgba(252, 252, 252, 0.44));
+    }
+
+    .list__face-tablet {
+      position: absolute;
+    }
+    .list__face-tablet:nth-child(2) {
+      bottom: 153;
+      right: 210;
+    }
+    .list__face-tablet:nth-child(3) {
+      bottom: 197;
+      right: 110;
+    }
+    .list__face-tablet:nth-child(4) {
+      bottom: 78;
+      right: 96;
+    }
+    .arrow-icon {
+      margin-top: 12px;
+      display: block;
+    }
+
+    .ellipse-tablet {
+      display: block;
+    }
+
+    .ellipse-tablet-left {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      z-index: -1;
+    }
+    .ellipse-tablet-right {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      z-index: -1;
+    }
+    .cafe {
+      display: block;
+    }
+    .cafe-track {
+      font-family: 'Montserrat';
+      font-weight: 900;
+      font-size: 28px;
+      line-height: 1.21;
+      text-align: right;
+      letter-spacing: 0.04em;
+      text-transform: uppercase;
+
+      color: #131313;
+
+      .cafe-track-item {
+        font-family: 'Montserrat';
+        font-weight: 400;
+        font-size: 8px;
+        line-height: 1.25;
+        text-transform: lowercase;
+        text-align: right;
+        vertical-align: top;
+        color: #fcfcfc;
+      }
+    }
   }
 }
