--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="advantages section">
+<section class="advantages section" id="advantages">
   <div class="container">
     <h4 class="visually-hidden">Our advantages</h4>
     <ul class="advantages-list list">
