--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,3 +1,4 @@
+
 .header {
 background-color: $main-bg-color;
 
@@ -38,6 +39,8 @@ background-color: $main-bg-color;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.3;
+    cursor: url ("./images/header/icon.svg#icon-cursor"), auto;
+
     
     color: $white-text-color;
     
@@ -72,6 +75,7 @@ background-color: $main-bg-color;
             align-items: center;
             text-align: center;
             color: $black-text-color;
+            stroke: currentColor;
             background-color: $accent-color;
             border: none;
             outline: none;
@@ -91,16 +95,6 @@ background-color: $main-bg-color;
             &:disabled {
                 background: $disabled-color;
             }
-            &::after {
-                content: "";
-                background-image:url(../images/header/icon.svg#icon-btn-after);
-        background-size: 12px 12px;
-        background-repeat: no-repeat;
-        fill: $black-text-color;
-            }
-            &:hover::after {
-                fill: $white-text-color;
-            }
     
     @media screen and (max-width:767px) {
     display: none;
@@ -110,7 +104,20 @@ background-color: $main-bg-color;
     }
     
 }
+.main-button-title {
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 1.2px;
+margin-right: 7px;
+}
+.icon-btn-after {
+    stroke: currentColor;
 
+    &:focus {
+        stroke: currentColor;
+    }
+}
 .position {
     @media screen and (max-width:1199px) {
     margin-left: auto;
