--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -6,7 +6,7 @@
       </h1>
       <ul class="hero__list list">
         <li class="hero__item">
-          <a class="hero__btn link" href="">Products</a>
+          <a class="products-button link" href="">Products</a>
         </li>
         <li class="hero__item">
           <a class="hero__link link" href="">How it’s made?</a>
@@ -26,6 +26,7 @@
       </ul>
     </div>
   </div>
+  <!-- mobile ice-cream -->
   <ul class="ice__list list">
     <li class="list__ice">
       <img src="./images/hero/ice-cream-mobile-1x.png" alt="" />
@@ -46,12 +47,21 @@
       <img src="./images/hero/ellipse-mob-right.png" alt="" />
     </li>
   </ul>
+  <!-- tablet ice-cream -->
   <div class="about-icecream">
     <img
+      class="plate-tablet"
       src="./images/hero/plate-tablet-1x.png"
       alt=""
       width="152"
       height="152"
+    />
+    <img
+      class="plate-desktop"
+      src="./images/hero/plate-desktop-1x.png"
+      alt=""
+      width="225"
+      height="225"
     />
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
