--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,15 +1,9 @@
-<section class="section__products">
+<section class="section products">
   <div class="container">
-    <label for="first_name" class="section__label">100% natural</label>
-    <input
-      type="text"
-      name="first_name"
-      id="first_name"
-      class="input__label visually-hidden"
-    />
-    <h2 class="section__title">products</h2>
-    <div class="section__cards">
-      <div class="section__card section__card--ice-cream">
+    <p class="products__pre-title">100% natural</p>
+    <h2 class="products__title">products</h2>
+    <div class="products__cards">
+      <div class="products__card products__card--ice-cream">
         <picture>
           <source
             srcset="
@@ -64,6 +58,7 @@
             height="200"
           />
         </picture>
+        <span class="products__circle products__circle--icecream"></span>
         <div class="card__item">
           <h3 class="card__title">ice cream</h3>
           <p class="card__text">
@@ -85,7 +80,7 @@
           </button>
         </div>
       </div>
-      <div class="section__card section__card--ice-coffee">
+      <div class="products__card products__card--ice-coffee">
         <picture>
           <source
             srcset="
@@ -140,7 +135,7 @@
             height="200"
           />
         </picture>
-
+        <span class="products__circle products__circle--icecoffee"></span>
         <div class="card__item">
           <h3 class="card__title">ice coffee</h3>
           <p class="card__text">
@@ -163,7 +158,7 @@
         </div>
       </div>
 
-      <div class="section__card section__card--milkshakes">
+      <div class="products__card products__card--milkshakes">
         <picture>
           <source
             srcset="
@@ -218,7 +213,7 @@
             height="200"
           />
         </picture>
-
+        <span class="products__circle products__circle--milksnakes"></span>
         <div class="card__item">
           <h3 class="card__title">milkshakes</h3>
           <p class="card__text">
