add little changes, add id

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,7 +1,7 @@
 <section class="about section">
   <div class="container">
     <p class="about-pre-title">tradition and love</p>
-    <h2 class="about-title">how it<span>&#39</span>s made?</h2>
+    <h2 id=about class="about-title">how it<span>&#39</span>s made?</h2>
     <div class="about-picture">
       <img class="about-cow" src="./images/about/about-cow-mob-1x.png" alt="cow" width="278" height="278" />
     </div>
@@ -25,7 +25,7 @@
     
     
     
-    <button type="button" class="main-button about-button" data-modal-open>
+    <button type="button" class="main-button about-button">
       Read more
       <span>
         <svg class="more" width="12" height="12">
