--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -41,7 +41,7 @@
   width: 100%;
   transform: translateY(22px);
 }
-.about-list {
+.about-item {
   @include font(400, 12px, 1.75, 0.04em);
   margin-left: auto;
   margin-right: auto;
