mobile-first-corect

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -7,21 +7,21 @@
 <div>
 <ul class="soc list">
     <li class="soc__item">
-        <a href="" class="soc__link">
+        <a href="https://github.com/" rel="noopener noreferrer nofollow" class="soc__link">
             <svg class="soc__icons" width="20" height="20">
                 <use href="./images/symbol-defs.svg#icon-github-def"></use>
               </svg>
         </a>
     </li>
     <li class="soc__item">
-        <a href="" class="soc__link">
+        <a href="https://web.telegram.org/k/" rel="noopener noreferrer nofollow" class="soc__link">
             <svg class="soc__icons" width="20" height="20">
                 <use href="./images/symbol-defs.svg#icon-telegram-def"></use>
               </svg>
         </a>
     </li>
     <li class="soc__item">
-        <a href="" class="soc__link link">
+        <a href="https://www.facebook.com/" rel="noopener noreferrer nofollow" class="soc__link link">
             <svg class="soc__icons" width="20" height="20">
                 <use href="./images/symbol-defs.svg#icon-facebook-def"></use>
               </svg>
