--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,26 +1,5 @@
 .footer {
-    .list {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-      }
-      .link {
-        text-decoration: none;
-      }
-    .container {
-        width: 100%;
-        margin: 0 auto;
-        padding: 0 15px;
-        @include mobile {
-          width: 480px;
-        }
-        @include tablet {
-          width: 768px;
-        }
-        @include desktop {
-          width: 1200px;
-        }
-      }
+    
     // .title {
     // }
     .text__made {
@@ -67,7 +46,6 @@ color: $white-text-color;}
     // .tel {
     // }
     .tel__link {
-        font-style: normal;
 font-weight: 700;
 font-size: 12px;
 line-height: 1.86;
@@ -88,7 +66,7 @@ color: $white-text-color;
 font-size: 14px;
 line-height: 1.52;
 text-align: center;
-color: #7A7A7A;
+color: #E1E1E1;
         }
     
 }
