--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -58,7 +58,7 @@ color: $white-text-color;
     }
     .license-box {
         margin-top: 40px;
-        border-top: 1px solid $white-text-color;
+        border-top: 1px solid #E1E1E1;
     }
     .license {
         padding-top: 16px;
@@ -66,7 +66,7 @@ color: $white-text-color;
 font-size: 14px;
 line-height: 1.52;
 text-align: center;
-color: #E1E1E1;
+color: #7A7A7A;
         }
     
 }
