--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -2,12 +2,21 @@
 
 .test-buttons {
   // width: 1200px;
-  height: auto;
-  display: flex;
+  z-index: 200;
+  height: 100px;
+  display: grid;
+  grid-gap: 10px;
+  grid-template: repeat(4, 1fr) / repeat(2, 1fr);
+  grid-auto-flow: row dense;
+  margin: auto 20px;
+
+  .main-button {
+    justify-content: center;
+  }
 }
 
 // UL normalize display ------------ NEED TO BE IN COMMON
-ul {
+.modal ul {
   padding-inline-start: 0;
 }
 
@@ -19,7 +28,6 @@ ul {
   visibility: hidden;
 
   position: fixed;
-  overflow-y: scroll;
 
   top: 0;
   left: 0;
@@ -28,28 +36,51 @@ ul {
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 20;
   transition: 0.3s all;
+  overflow-y: scroll;
 
-  display: flex;
-  align-items: center;
+  // display: flex;
+  // align-items: center;
   // justify-content: center;
-  flex-direction: column;
+  // flex-direction: column;
+}
+
+.modal__all-modals-container {
+  //   pointer-events: none;
+  overflow-y: scroll;
+  position: fixed;
+  // z-index: -1;
+  // opacity: 0;
+  // visibility: hidden;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: center;
+  //   flex-direction: column;
 }
 
 // --------------- MODAL STYLES ------------------------
 .modal {
   /* Hide all modals  */
-  opacity: 0;
+  opacity: 1;
   visibility: hidden;
 
   // z-index must be greater than overlay
   z-index: 21;
 
   // modal styles
+
   position: fixed;
+
   // margin-top: 15%;
+
   // top: 50%;
   // left: 50%;
   // transform: translate(-50%, -50%);
+
   width: 100%;
   max-width: 280px;
   height: auto;
@@ -73,6 +104,11 @@ ul {
   opacity: 1;
   visibility: visible;
 }
+
+// .modal.active {
+//   @media screen and {
+//   }
+// }
 
 .modal__title {
   font-family: $secondary-ff;
@@ -247,7 +283,7 @@ ul {
 .modal__form {
   display: flex;
   flex-direction: column;
-  gap: 12.12px;
+  gap: 12px;
 
   @media screen and (min-width: 768px) {
     gap: 0px;
@@ -261,7 +297,8 @@ ul {
   }
 }
 
-.modal__input-div {
+.modal__input-div,
+.modal__input-textarea {
   position: relative;
 
   transition: color $timing-function $duratoin;
@@ -271,9 +308,17 @@ ul {
   }
 }
 
+.modal__input-label {
+  // margin: 0 auto;
+
+  max-width: 100%;
+  @media screen and (min-width: 758px) {
+    width: 368px;
+  }
+}
+
 .modal__form-input {
   resize: none;
-  width: 100%;
 
   padding: 8px 12px;
 
@@ -288,16 +333,10 @@ ul {
   border: 1px solid $main-bg-color;
   border-radius: 10px;
 
-  &:focus-visible {
-    outline: none;
+  @media screen and (min-width: 768px) {
+    width: 100%;
   }
 
-  .modal__input-div & {
-    height: 32px;
-  }
-}
-
-.modal__input-textarea {
   &::placeholder {
     font-family: $main-ff;
 
@@ -308,6 +347,16 @@ ul {
     color: $black-text-color;
   }
 
+  &:focus-visible {
+    outline: none;
+  }
+
+  .modal__input-div & {
+    height: 32px;
+  }
+}
+
+.modal__input-textarea {
   & .modal_form-input {
     resize: none;
 
@@ -341,6 +390,10 @@ ul {
     font-size: 14px;
     line-height: 1.4;
 
+    @media screen and (min-width: 768px) {
+      text-align: justify;
+    }
+
     color: $black-text-color;
   }
 
@@ -367,7 +420,7 @@ ul {
 
     &:hover {
       color: $accent-color;
-      background-color: $tab-menu-bg-color;
+      background-color: $accent-color;
 
       fill: $accent-color;
     }
@@ -431,41 +484,263 @@ ul {
   }
 }
 
-.extras__scroll-to-top {
-  padding: 5px;
-  height: 50px;
-  width: auto;
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  font-family: $secondary-ff;
-  cursor: pointer;
-  z-index: 100;
+// ------------ modal FRANCHISE --------------------
 
-  background-color: $accent-color;
-  border: 0px;
-  border-radius: 50px;
+.modal__franchise {
+  .modal__container {
+    @media screen and (min-width: 768px) {
+      padding: 32px 60px;
+    }
+  }
+  .modal__title {
+    margin-bottom: 24px;
+    text-align: center;
 
-  animation: extras__scroll-to-top 1s linear infinite both;
+    @media screen and (min-width: 768px) {
+      padding: 0 63px;
+    }
+  }
+  .modal__about-us-text {
+    padding-bottom: 24px;
+
+    @media screen and (min-width: 768px) {
+      padding-bottom: 32px;
+    }
+  }
+
+  .modal__button-container {
+    margin: 12px auto 0px auto;
+  }
+
+  .modal__form-input {
+    @media screen and (min-width: 768px) {
+      height: 42px;
+    }
+  }
+
+  .modal__form-input.modal__input-textarea {
+    @media screen and (min-width: 768px) {
+      height: 84px;
+    }
+  }
+
+  .modal__about-us-text {
+    font-family: $main-ff;
+    font-style: normal;
+    font-size: 16px;
+    line-height: 1.4;
+    text-align: left;
+
+    color: $black-text-color;
+
+    @media screen and (min-width: 768px) {
+      text-align: justify;
+    }
+  }
 }
 
-@keyframes extras__scroll-to-top {
-  0% {
-    transform: translate(0);
+// ------------ modal calories and descriptions ------------
+
+.modal__calories {
+  list-style-type: none;
+
+  .modal__title {
+    margin-bottom: 24px;
   }
-  20% {
-    transform: translate(-2px, 2px);
+
+  .modal__items {
+    margin-bottom: 24px;
   }
-  40% {
-    transform: translate(-2px, -2px);
+
+  .modal__item {
+    height: 138px;
   }
-  60% {
-    transform: translate(2px, 2px);
+
+  .modal__calories-list {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    gap: 9px;
+
+    font-family: $main-ff;
+
+    font-size: 10px;
+    line-height: 1.2;
+
+    /* identical to box height */
+
+    color: $black-text-color;
+
+    margin-bottom: 48px;
+
+    @media screen and (min-width: 768px) {
+      font-size: 12px;
+      line-height: 1.25;
+      gap: 20px;
+    }
   }
-  80% {
-    transform: translate(2px, -2px);
+
+  .modal__calories-h2 {
+    font-family: $main-ff;
+
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.4;
+
+    margin-bottom: 24px;
   }
-  100% {
-    transform: translate(0);
+
+  .modal__calories-name {
+    width: 38px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    @media screen and (min-width: 768px) {
+      width: 52px;
+    }
+  }
+
+  .modal__ing-table {
+    display: flex;
+    flex-direction: column;
+    gap: 11px;
+    list-style-type: none;
+
+    width: 100%;
+
+    font-family: $main-ff;
+
+    font-size: 14px;
+    line-height: 1.76;
+    letter-spacing: 0.04em;
+    margin-bottom: 48px;
+  }
+
+  .modal__ing-table-item {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.modal__form-input {
+  @media screen and (min-width: 768px) {
+    height: 42px;
+  }
+}
+
+.modal__form-input.modal__input-textarea {
+  @media screen and (min-width: 768px) {
+    height: 84px;
+  }
+}
+
+.hover-underline-animation {
+  display: inline-block;
+  position: relative;
+  // color: $black-text-color;
+}
+
+.hover-underline-animation:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  border-radius: 10px;
+
+  bottom: 0;
+  left: 0;
+  transform-origin: center;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
+
+  .modal__calories-ice-cream & {
+    background-color: $decoration-element-color;
+  }
+
+  .modal__calories-ice-coffee & {
+    background-color: $products-yellow-color;
+  }
+
+  .modal__calories-milkshake & {
+    background-color: $products-brown-color;
+  }
+}
+
+.hover-underline-animation:hover:after {
+  transform-origin: center;
+  transform: scaleX(1);
+}
+
+.modal__calories-list-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+  height: 72px;
+  width: 53px;
+
+  @media screen and (min-width: 768px) {
+    height: 90px;
+    width: 65px;
+    padding-bottom: 7px;
+    gap: 7px;
+  }
+
+  padding-bottom: 8px;
+  border-radius: 40px;
+
+  .modal__calories-ice-cream & {
+    -webkit-box-shadow: inset 0px 0px 0px 2px $decoration-element-color;
+    -moz-box-shadow: inset 0px 0px 0px 2px $decoration-element-color;
+    box-shadow: inset 0px 0px 0px 2px $decoration-element-color;
+  }
+
+  .modal__calories-ice-coffee & {
+    -webkit-box-shadow: inset 0px 0px 0px 2px $products-yellow-color;
+    -moz-box-shadow: inset 0px 0px 0px 2px $products-yellow-color;
+    box-shadow: inset 0px 0px 0px 2px $products-yellow-color;
+  }
+
+  .modal__calories-milkshake & {
+    -webkit-box-shadow: inset 0px 0px 0px 2px $products-brown-color;
+    -moz-box-shadow: inset 0px 0px 0px 2px $products-brown-color;
+    box-shadow: inset 0px 0px 0px 2px $products-brown-color;
+  }
+}
+
+.modal__calories-value {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  height: 43px;
+  width: 43px;
+
+  border: 0px;
+  border-radius: 50%;
+
+  .modal__calories-ice-cream & {
+    background-color: $decoration-element-color;
+    border: 2px solid $decoration-element-color;
+  }
+
+  .modal__calories-ice-coffee & {
+    background-color: $products-yellow-color;
+    border: 2px solid $products-yellow-color;
+  }
+
+  .modal__calories-milkshake & {
+    background-color: $products-brown-color;
+    border: 2px solid $products-brown-color;
+  }
+
+  font-weight: 500;
+  line-height: 2.33;
+  /* or 233% */
+
+  @media screen and (min-width: 768px) {
+    height: 50px;
+    width: 50px;
   }
 }
