--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -1,17 +1,18 @@
 $main-ff: 'Montserrat', sans-serif;
 $secondary-ff: 'Seymour One', sans-serif;
 $roboto-ff: 'Roboto', sans-serif;
-$main-bg-color: #84A178;
-$accent-color: #F8D24E;
-$mob-menu-bg-color: #85A279;
-$tab-menu-bg-color: #97AF8D;
-$white-text-color: #FCFCFC;
+$main-bg-color: #84a178;
+$accent-color: #f8d24e;
+$mob-menu-bg-color: #85a279;
+$tab-menu-bg-color: #97af8d;
+$white-text-color: #fcfcfc;
 $black-text-color: #131313;
 $input-bg-color: rgba(248, 210, 78, 0.1);
-$hover-green-color: #0A8817;
-$products-green-color: #AEC6A5;
-$products-yellow-color: #EFD478;
-$products-brown-color: #D6936D;
-$disabled-color: #ABABAB;
+$hover-green-color: #0a8817;
+$products-green-color: #aec6a5;
+$products-yellow-color: #efd478;
+$products-brown-color: #d6936d;
+$disabled-color: #ababab;
 $duratoin: cubic-bezier(0.4, 0, 0.2, 1);
 $timing-function: 250ms;
+$decoration-element-color: #9cbe8f; ;
