--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,4 +1,4 @@
-.section__products {
+.section.products {
 	background-color: #fff;
 	align-items: center;
 }
@@ -21,52 +21,51 @@
 	.container {
 		max-width: 767px;
 		margin: 0 auto;
+		width: 100%;
 	}
 
-	.section-products {
+	.section.products {
 		background-color: #fff;
-		background-image: url("../images/mobile/background-mobile.svg");
+		background-image: url("../images/products/mobile/background-mobile.svg");
 	}
 
 	.products__pre-title {
-		line-height: 1.2;
-		font-weight: 800;
-		font-size: 18px;
-		color: #131313;
-		align-items: center;
+		@include font(800, 18px, 1.2, тnull);
+		font-family: $secondary-ff;
+		color: $black-text-color;
 		text-align: center;
 		text-transform: uppercase;
 	}
 
 	.products__title {
-		font-family: "Seymour One";
-		line-height: 1.26;
-		font-weight: 400;
-		font-size: 30px;
-		color: #131313;
-		letter-spacing: 0.04;
+		@include font(400, 30px, 1.26, 0.04em);
+		font-family: $secondary-ff;
+		color: $black-text-color;
 		text-align: center;
-		align-items: center;
 		text-transform: uppercase;
+		margin-bottom: 148px;
+
 	}
 
 	.products__cards {
 		align-items: center;
 		display: block;
 		position: relative;
-	}
-
-	.products__card:not(:last chaid) {
-		margin-bottom: 30px;
+		width: 100%;
+		margin: 0 auto;
 	}
 
 	.products__card {
 		position: relative;
-		width: 280px;
-		height: 420px;
+		min-width: 280px;
+		width: 100%;
+		min-height: 420px;
+		height: 100%;
 		border-radius: 24px;
-		background-repeat: no-repeat;
-		background-size: contain;
+	}
+
+	.products__card:not(:last-child) {
+		margin-bottom: 164px;
 	}
 
 	.products__card--ice-cream {
@@ -83,12 +82,15 @@
 	}
 
 	.card__item {
-		position: relative;
+		z-index: 3;
+		position: absolute;
 		text-align: center;
-		display: flex;
 		align-items: center;
-		justify-content: center;
+		display: flex;
 		flex-direction: column;
+		justify-content: space-between;
+		padding: 0px 40px;
+		top: 123px;
 	}
 
 }
@@ -96,19 +98,28 @@
 .card-img {
 	position: absolute;
 	z-index: 24;
-	top: 0px;
+	margin: 0 auto;
 	border-radius: 50%;
-	width: 200px;
-	height: 200px;
+	width: 200.33px;
+	height: 199.68px;
+	transform: translateY(-50%);
+	align-items: center;
+
 }
 
 .products__circle {
 	z-index: 23;
 	position: absolute;
-	width: 200px;
-	height: 200px;
-	top: 15px;
+	width: 200.33px;
+	height: 199.68px;
+	padding: 0px 40px;
+	top: 11.32px;
+	align-items: center;
+	margin: 0 auto;
 	border-radius: 50%;
+	transform: translateY(-50%);
+	margin-bottom: 20px;
+
 
 	&.products__circle--icecream {
 
@@ -170,6 +181,7 @@
 	letter-spacing: 0.04em;
 	text-transform: uppercase;
 	color: #131313;
+	margin-bottom: 40px;
 }
 
 .card__text {
@@ -179,6 +191,7 @@
 	text-align: center;
 	letter-spacing: 0.04em;
 	color: #131313;
+	margin-bottom: 90px;
 }
 
 .card__button {
@@ -193,9 +206,9 @@
 
 
 @media screen and (min-width:768px) {
-	.section__products {
+	.section.products {
 		background-color: #fff;
-		background-image: url("../images/tablet/backgroung-tablet.svg");
+		background-image: url("../images/products/tablet/backgroung-tablet.svg");
 	}
 
 	.products__cards {
@@ -211,8 +224,8 @@
 }
 
 @media screen and (min-width:1200px) {
-	.section__products {
+	.section.products {
 		background-color: #fff;
-		background-image: url("../images/desktop/background-desctop.svg");
+		background-image: url("../images/products/desktop/background-desctop.svg");
 	}
 }
