--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -51,17 +51,14 @@
 		align-items: center;
 		display: block;
 		position: relative;
-		width: 100%;
-		margin: 0 auto;
 	}
 
 	.products__card {
 		position: relative;
-		min-width: 280px;
-		width: 100%;
-		min-height: 420px;
-		height: 100%;
+		width: 280px;
+		height: 420px;
 		border-radius: 24px;
+		justify-content: center;
 	}
 
 	.products__card:not(:last-child) {
