--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -112,4 +112,30 @@
       />
     </li>
   </ul>
+  <img
+    class="ellipse-desktop"
+    src="./images/hero/ellipse-desktop-1x.png"
+    alt=""
+    width="1200"
+    height="384"
+  />
+  <ul class="ice__list-desktop list">
+    <li class="list__ice-desktop">
+      <img
+        src="./images/hero/ice-cream-desktop-1x.png"
+        alt=""
+        width="447"
+        height="561"
+      />
+    </li>
+    <li class="list__face-desktop">
+      <img src="./images/hero/ice-face-desktop-1.png" alt="" />
+    </li>
+    <li class="list__face-desktop">
+      <img src="./images/hero/ice-face-desktop-2.png" alt="" />
+    </li>
+    <li class="list__face-desktop">
+      <img src="./images/hero/ice-face-desktop-3.png" alt="" />
+    </li>
+  </ul>
 </section>
