--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -22,6 +22,12 @@
   &__list {
     display: flex;
     margin-top: 32px;
+    @include tablet {
+      margin-top: 20px;
+    }
+    @include desktop {
+      margin-top: 28px;
+    }
     .hero__item:not(:last-child) {
       margin-right: 8px;
       @include desktop {
@@ -64,9 +70,11 @@
     bottom: 0;
     left: 81px;
     filter: drop-shadow(0 0 3.75rem rgba(252, 252, 252, 0.44));
+    z-index: 1;
   }
   .list__face {
     position: absolute;
+    z-index: 1;
   }
   .list__face:nth-child(2) {
     bottom: 98;
@@ -93,6 +101,13 @@
   }
 
   .ellipse-tablet {
+    display: none;
+  }
+
+  .ice__list-desktop {
+    display: none;
+  }
+  .ellipse-desktop {
     display: none;
   }
 
@@ -206,7 +221,8 @@
     }
     .arrow-icon {
       margin-top: 12px;
-      display: block;
+      display: inline-block;
+      fill: #fcfcfc;
       @include desktop {
         margin-top: 24px;
       }
@@ -236,24 +252,24 @@
     }
     .cafe-track {
       font-family: 'Montserrat';
-      font-weight: 900;
-      font-size: 28px;
-      line-height: 1.21;
+      @include font(900, 28px, 1.21, 0.04em);
       text-align: right;
-      letter-spacing: 0.04em;
       text-transform: uppercase;
-
       color: #131313;
+      @include desktop {
+        @include font(900, 46px, 1.22, 0.04em);
+      }
 
       .cafe-track-item {
         font-family: 'Montserrat';
-        font-weight: 400;
-        font-size: 8px;
-        line-height: 1.25;
+        @include font(400, 8px, 1.25, null);
         text-transform: lowercase;
         text-align: right;
         vertical-align: top;
         color: #fcfcfc;
+        @include desktop {
+          @include font(400, 14px, 1.21, null);
+        }
       }
     }
   }
@@ -276,11 +292,46 @@
 
     .about-icecream {
       margin-top: 42px;
+      z-index: 1;
     }
 
     .plate-desktop {
       margin-right: 14px;
       display: block;
+    }
+    .ellipse-desktop {
+      display: block;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      z-index: -1;
+    }
+
+    .ice__list-desktop {
+      display: block;
+    }
+
+    .list__ice-desktop {
+      position: absolute;
+      bottom: 0;
+      right: 102px;
+      filter: drop-shadow(0 0 3.75rem rgba(252, 252, 252, 0.44));
+    }
+
+    .list__face-desktop {
+      position: absolute;
+    }
+    .list__face-desktop:nth-child(2) {
+      bottom: 266;
+      right: 298;
+    }
+    .list__face-desktop:nth-child(3) {
+      bottom: 342;
+      right: 115;
+    }
+    .list__face-desktop:nth-child(4) {
+      bottom: 138;
+      right: 93;
     }
   }
 }
