--- a/src/sass/_advantages.scss
+++ b/src/sass/_advantages.scss
@@ -42,6 +42,7 @@
   background-repeat: no-repeat;
   background-position: center;
   margin-bottom: 16px;
+  background-size: 36px;
 
   @include tablet {
     margin-bottom: 32px;
