--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,11 +9,10 @@
 @import './hero';
 @import './products';
 @import './about';
-@import './advantages';
+// @import './advantages';
 @import './gallery';
 @import './reviews';
 @import './contacts';
 @import './footer';
 @import './modal';
 @import './extras';
-
